Updated Makefile to include clean target

--- a/elb-classic-lab/Makefile
+++ b/elb-classic-lab/Makefile
@@ -5,7 +5,7 @@ vars = -var-file="../secrets.auto.tfvars"
 init: 
 	terraform init
 
-plan: *.tf 
+plan: *.tf init 
 	terraform plan $(vars) -out plan.out
 
 apply: plan
@@ -14,3 +14,6 @@ apply: plan
 destroy: 
 	terraform destroy $(vars) -auto-approve
 
+clean: destroy
+	rm -rf plan.out terraform.tfstate*
+    
