Fix exclusion to mnage secrets in each lab

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 **/.terraform
 **/*.terraform
 **/terraform.tfstate*
-secrets.auto.tfvars
+**/secrets.auto.tfvars
 **/plan.out
 **/.terraform.tfstate*
